assets/sass/components/_dark-mode.sass
@media (prefers-color-scheme: light)
    body
        background-color: white
        color: black
        #hero
            .hero-group
                .hero-title
                    .hide-light
                        display: none
        #portfolio
            .portfolio-group
                .portfolio-card
                    img
                        box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24)
            .portfolio-grid
                .portfolio-card
                    img
                         box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24)
        #blog
            .blog
                .blog-card
                    img
                        box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24)

@media (prefers-color-scheme: dark)
    body
        background-color: black
        color: white
        #hero
            .hero-group
                .hero-title
                    .hide-dark
                        display: none
        #portfolio
            .portfolio-group
                .portfolio-card
                    p
                        a
                            // color: $sccent-color
                            color: #51E3D4
                        a:hover
                            // color: $primary-color
                            color: #474F85
            .portfolio-grid
                .portfolio-card
                    p
                        a
                            // color: $sccent-color
                            color: #51E3D4
                        a:hover
                            // color: $primary-color
                            color: #474F85
        #blog
            .blog
                .blog-card
                    color: white
                    h2
                        color: #51E3D4
        #blog-detail
            .breadcrumb
                ul
                    li
                        opacity: 1
                        a
                            color: white
                        a:hover
                            color: #51E3D4
            a
                color: #51E3D4
                text-decoration: none
            a:hover
                opacity: 0.7
            .blog-title
                .title
                    h1
                        color: #51E3D4
            .blog-author
                span
                    opacity: 1
                p
                    opacity: 1
            .blog-article
                opacity: 1
        .coming-soon
            .coming-soon-group
                h1
                    color: #51e3d4
                p
                    font-size: 20px
                    a
                        text-decoration: none
                        color: #51e3d4
                    a:hover
                        color: #5b64a0

.dark-mode body
    background-color: black
    color: white
    #hero
        .hero-group
            .hero-title
                .hide-dark
                    display: none
    #portfolio
        .portfolio-group
            .portfolio-card
                p
                    a
                        // color: $sccent-color
                        color: #51E3D4
                    a:hover
                        // color: $primary-color
                        color: #474F85
        .portfolio-grid
            .portfolio-card
                p
                    a
                        // color: $sccent-color
                        color: #51E3D4
                    a:hover
                        // color: $primary-color
                        color: #474F85
    #blog
        .blog
            .blog-card
                color: white
                h2
                    color: #51E3D4
    #blog-detail
        .breadcrumb
            ul
                li
                    opacity: 1
                    a
                        color: white
                    a:hover
                        color: #51E3D4
        a
            color: #51E3D4
            text-decoration: none
        a:hover
            opacity: 0.7
        .blog-title
            .title
                h1
                    color: #51E3D4
        .blog-author
            span
                opacity: 1
            p
                opacity: 1
        .blog-article
            opacity: 1
    .coming-soon
        .coming-soon-group
            h1
                color: #51e3d4
            p
                font-size: 20px
                a
                    text-decoration: none
                    color: #51e3d4
                a:hover
                    color: #5b64a0

